Mon Sep 12 14:38:32 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * INSTALL:

          Trying to make it clear that the "Compilation on Widnows..."
          paragraph only applies to the android cross-compile.

        * java/build_scripts/generate_javadoc.pl:

          Updated URL for Java SE javadocs, sun.com no longer works.

Thu Sep  8 18:26:40 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/Definitions.h:

          Change to not define DDS_HAS_WCHAR for android as it is not complete
          on the platform.

Tue Aug 30 17:25:37 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.validation/build-external.xml:
        * tools/modeling/plugins/org.opendds.modeling.validation/build.properties:
        * tools/modeling/tests/setup.pl:

          Add supoort to fail fast (default) when ant run.tests taget fails,
          or use -f arg on setup.pl to force the script to keep running.

Tue Aug 30 14:41:53 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/MessengerSplit/MessengerSplit.opendds:

          Validation error.

Tue Aug 30 13:54:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ConfigTransports/common.cpp:

          More warnings.

Mon Aug 29 14:31:14 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ConfigTransports/Puller.cpp:
        * tests/DCPS/ConfigTransports/common.cpp:

          Fixed warnings.

Fri Aug 26 14:52:09 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/MessengerSplit/MessengerTopics.codegen:
        * tools/modeling/tests/MessengerSplit/MessengerTopics.opendds:

          Add missing codegen file.
          Fix model name in model.

Thu Aug 25 23:30:25 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:

          Cleaned up extra whitespace.
