@@ -29,7 +29,7 @@ MulticastReceiveStrategy::get_handle() const
 int
 MulticastReceiveStrategy::handle_input(ACE_HANDLE /*fd*/)
 {
-  return TransportReceiveStrategy::handle_input();  // delegate to parent
+  return TransportReceiveStrategy<>::handle_input();  // delegate to parent
 }
 
 ssize_t
